Fixed member card overflow & improved small screen member card

--- a/web/web/assets/css/misc-pages.css
+++ b/web/web/assets/css/misc-pages.css
@@ -569,7 +569,7 @@ button[id="submit"]:hover {
 
 .member-card-description {
     width: 70%;
-    padding: 55px 0 0 30px;
+    padding: 38px 0 0 30px;
 }
 
 .member-card-image {
